--- a/.github/workflows/techdocs.yaml
+++ b/.github/workflows/techdocs.yaml
@@ -21,7 +21,7 @@ jobs:
       AWS_ENDPOINT: ${{ secrets.AWS_ENDPOINT }}
       ENTITY_NAMESPACE: 'default'
       ENTITY_KIND: 'Component'
-      ENTITY_NAME: 'backstage-showcase'
+      ENTITY_NAME: 'demo-quarkus-app'
 
     steps:
       - name: Checkout code
