--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,5 +1,5 @@
 site_name: demo-quarkus-app
-site_description: This is backend Quarkus Application that handles REST APIs for demo purposes
+site_description: This is backend Quarkus Application that handles REST APIs for demo purposes.
 repo_url: https://github.com/janus-idp-demo/demo-quarkus-app
 edit_uri: edit/main/docs
 
